--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <pre><code>lein run -- --help
 lein run -- --couchbase http://clusterhost:8091/ --bucket cbfsbucket
 </code></pre>
+    <a href="uberdoc.html">Annotated Source</a>
       </section>
     </div>
 
